test/errhandling/psahabu/generic-throws.good
generic-throws.chpl:11: error: halt reached - StringError: 42 is a numeric type
